Added AGP content

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dr. Jeewan Kumar</title>
+    <title>Dr. Arun Gokul Pon</title>
     <style>
         img.wp-smiley,
         img.emoji {
@@ -762,7 +762,7 @@
         }
 
         .tm-titlebar-wrapper .tm-titlebar-inner-wrapper {
-            height: 283px
+            height: 150px
         }
 
         .tm-header-overlay .themetechmount-titlebar-wrapper .tm-titlebar-inner-wrapper {
@@ -3734,10 +3734,10 @@
                                 <div class="site-branding tm-wrap-cell">
                                     <div class="headerlogo themetechmount-logotype-image tm-stickylogo-no"><span
                                             class="site-title"><a class="home-link" href="../index.html"
-                                                title="Dr.Jeewan Kumar"><span
+                                                title="Dr. Arun Gokul Pon"><span
                                                     class="tm-sc-logo tm-sc-logo-type-image"><img
                                                         class="themetechmount-logo-img standardlogo"
-                                                        alt="Dr.Kumar Anand" src="./img/logo.jpg"></span></a></span>
+                                                        alt="Dr. Arun Gokul Pon" src="./img/logo.png"></span></a></span>
                                         <h2 class="site-description">Heart Care Center</h2>
                                     </div>
                                 </div><!-- .site-branding -->
@@ -3760,7 +3760,10 @@
                                                         <a href="index.html" aria-current="page">Home</a></li>
                                                     <li id="menu-item-3312"
                                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3312">
-                                                        <a href="about.html">Dr. Jeewan Kumar</a></li>
+                                                        <a href="about.html">Dr. Arun Gokul Pon</a></li>
+                                                    <li id="menu-item-3075"
+                                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3071">
+                                                        <a href="services.html">Services</a></li>
                                                     <li id="menu-item-3263"
                                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3263">
                                                         <a href="index.html#bookappointment">Book
@@ -3903,13 +3906,11 @@
                                                                                                         class="tm-vc_cta3-headers tm-wrap-cell">
                                                                                                         <h2 style="font-size:20px;line-height:28px;font-family:'Saira',Arial,Helvetica;font-weight:500;"
                                                                                                             class="tm-custom-heading ">
-                                                                                                            Dr. Jeewan
-                                                                                                            Kumar
+                                                                                                            DR. Arun Gokul Pon
                                                                                                         </h2>
                                                                                                         <h4 style="font-size:14px;line-height:18px;font-family:'Ubuntu',Arial,Helvetica;font-weight:400;"
                                                                                                             class="tm-custom-heading ">
-                                                                                                            Amar
-                                                                                                            Hospital,Patiala
+                                                                                                            AGP Neuro Clinic, 18/25 A-1, Rajakamanagalam Road, Karavilai, Kanyakumari District, Tamil Nadu, India - 629201
                                                                                                         </h4>
                                                                                                     </div>
                                                                                                 </div>
@@ -3950,7 +3951,7 @@
                                                                                                         class="tm-vc_cta3-headers tm-wrap-cell">
                                                                                                         <h2 style="font-size:20px;line-height:28px;font-family:'Saira',Arial,Helvetica;font-weight:500;"
                                                                                                             class="tm-custom-heading ">
-                                                                                                            jeewan_mittal@yahoo.com
+                                                                                                            agpneuroclinic@gmail.com
                                                                                                         </h2>
                                                                                                         <h4 style="font-size:14px;line-height:18px;font-family:'Ubuntu',Arial,Helvetica;font-weight:400;"
                                                                                                             class="tm-custom-heading ">
@@ -3998,7 +3999,7 @@
                                                                                                         <h2 style="font-size:20px;line-height:28px;font-family:'Saira',Arial,Helvetica;font-weight:500;"
                                                                                                             class="tm-custom-heading ">
                                                                                                             +91
-                                                                                                            9781695777,
+                                                                                                            8300044644,
                                                                                                         </h2>
                                                                                                         <h4 style="font-size:14px;line-height:18px;font-family:'Ubuntu',Arial,Helvetica;font-weight:400;"
                                                                                                             class="tm-custom-heading ">
@@ -4082,6 +4083,7 @@
                                                                                     <div
                                                                                         class="themetechmount-social-links-wrapper">
                                                                                         <ul class="social-icons">
+                                                                                            <li class="tm-social-facebook">Test</li>
                                                                                             <li
                                                                                                 class="tm-social-facebook">
                                                                                                 <a class=" tooltip-top"
@@ -4426,18 +4428,17 @@
                                                                     </span></div>
                                                                 <div class="mkdf-wh-holder-inner">
                                                                     <div class="mkdf-wh-holder-items">
+                                                                        <div class="mkdf-wh-holder-items">
+                                                                            <div class="mkdf-wh-item clearfix"><span
+                                                                                class="mkdf-wh-day">AGP Neuro Clinic</span><span
+                                                                                class="mkdf-wh-hours"><span
+                                                                                    class="mkdf-wh-from">4:00 PM &#8211;
+                                                                                    7:00 PM</span></span></div>
                                                                         <div class="mkdf-wh-item clearfix"><span
-                                                                                class="mkdf-wh-day">Amar Hospital
-                                                                            </span><span class="mkdf-wh-hours"><span
-                                                                                    class="mkdf-wh-from">10:00 am
-                                                                                    &#8211;
-                                                                                    03:00 pm</span></span></div>
-                                                                        <div class="mkdf-wh-item clearfix"><span
-                                                                                class="mkdf-wh-day">Home Clinic
-                                                                            </span><span class="mkdf-wh-hours"><span
-                                                                                    class="mkdf-wh-from">05:30 pm
-                                                                                    &#8211;
-                                                                                    07:30 pm</span></span></div>
+                                                                                class="mkdf-wh-day">KMMC Hospital</span><span
+                                                                                class="mkdf-wh-hours"><span
+                                                                                    class="mkdf-wh-from">9:00 AM &#8211;
+                                                                                    2:00 PM</span></span></div>
                                                                     </div>
                                                                     <div class="mkdf-wh-button"><a
                                                                             class="mkdf-btn mkdf-btn-medium mkdf-btn-solid"
