Added insta link

--- a/contact.html
+++ b/contact.html
@@ -4099,14 +4099,14 @@
                                                                                                     data-tooltip="Twitter"><i
                                                                                                         class="tm-brivona-icon-twitter"></i></a>
                                                                                             </li> -->
-                                                                                            <!-- <li
+                                                                                            <li
                                                                                                 class="tm-social-instagram">
                                                                                                 <a class=" tooltip-top"
                                                                                                     target="_blank"
-                                                                                                    href="https://instagram.com/jeewanmittal/"
+                                                                                                    href="https://www.instagram.com/agpneuroclinic/"
                                                                                                     data-tooltip="Instagram"><i
                                                                                                         class="tm-brivona-icon-instagram"></i></a>
-                                                                                            </li> -->
+                                                                                            </li>
                                                                                         </ul>
                                                                                     </div>
 
