Fix broken links and update styles in index.html and about.html

--- a/index.html
+++ b/index.html
@@ -4049,7 +4049,7 @@
                                                     <a href="about.html">Dr. Arun Gokul Pon</a></li>
                                                 <li id="menu-item-3312"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3312 menu-item-dropdown">
-                                                    <a href="about.html">Know your disease</a>
+                                                    <a>Know your disease</a>
                                                     <div class="menu-item-dropdown-content">
                                                         <a class="menu-item-dropdown-item" href="/knowyourdiseases/stroke.html">பக்கவாதம் (Stroke)</a>
                                                         <a class="menu-item-dropdown-item" href="#">Link 2</a>
