--- a/knowyourdiseases/stroke.html
+++ b/knowyourdiseases/stroke.html
@@ -7,7 +7,7 @@
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dr. Arun Gokul Pon</title>
+    <title>பக்கவாதம் (Stroke) - Dr. Arun Gokul Pon</title>
     <base href="/">
     <style>
         img.wp-smiley,
