Fix broken links and add Handbook link to about.html, contact.html, index.html, knowyourdiseases/stroke.html, and services.html

--- a/knowyourdiseases/stroke.html
+++ b/knowyourdiseases/stroke.html
@@ -3774,6 +3774,9 @@
                                                 </li>
                                                 <li id="menu-item-3075"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3071">
+                                                    <a href="handbook.html">Handbook</a></li>
+                                                <li id="menu-item-3075"
+                                                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3071">
                                                     <a href="services.html">Services</a></li>
                                                 <li id="menu-item-3263"
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3263">
