Update styles and fix broken links in multiple pages

--- a/index.html
+++ b/index.html
@@ -4051,9 +4051,9 @@
                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3312 menu-item-dropdown">
                                                     <a>Know your disease</a>
                                                     <div class="menu-item-dropdown-content">
-                                                        <a class="menu-item-dropdown-item" href="/knowyourdiseases/stroke.html">பக்கவாதம் (Stroke)</a>
-                                                        <a class="menu-item-dropdown-item" href="#">Link 2</a>
-                                                        <a class="menu-item-dropdown-item" href="#">Link 3</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/stroke.html">பக்கவாதம் (Stroke)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/migraine.html">ஒற்றைத் தலைவலி (Migraine)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="#">Link 3</a>
                                                     </div>
                                                 </li>
                                                 <li id="menu-item-3075"
