Update background size for fullwidthbanner-container class

--- a/index.html
+++ b/index.html
@@ -4085,7 +4085,7 @@
                                 rel="stylesheet" property="stylesheet" media="all">
                             <div id="rev_slider_1_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container"
                                 data-source="gallery"
-                                style="margin:0px auto;background:#ebf0f0;padding:0px;margin-top:0px;margin-bottom:0px; background-image: url(./img/website-top-crop.png); background-repeat: repeat; background-size: contain; background-position: center;">
+                                style="margin:0px auto;background:#ebf0f0;padding:0px;margin-top:0px;margin-bottom:0px; background-image: url(./img/website-top-crop.png); background-repeat: repeat; background-position: center;">
                                 <!-- START REVOLUTION SLIDER 5.4.8.2 fullwidth mode -->
                                 <div id="rev_slider_1_1" class="rev_slider fullwidthabanner" style="display:none;"
                                     data-version="5.4.8.2">
