Update styles and fix broken links in multiple pages

--- a/knowyourdiseases/stroke.html
+++ b/knowyourdiseases/stroke.html
@@ -3769,7 +3769,12 @@
                                                     <div class="menu-item-dropdown-content">
                                                         <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/stroke.html">பக்கவாதம் (Stroke)</a>
                                                         <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/migraine.html">ஒற்றைத் தலைவலி (Migraine)</a>
-                                                        <a class="menu-item-dropdown-item display-block" href="#">Link 3</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/bells-palsy.html">பெல்ஸ் பால்சி (Bells palsy)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/meningitis.html">மூளைக்காய்ச்சல் (Meningitis)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/parkinsons.html">பார்கின்சன் நோய் (Parkinson's disease)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/seizures.html">வலிப்பு (Seizures/Epilepsy)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/neuropathy.html">சர்க்கரை நோயினால் நரம்பு தளர்ச்சி (Diabetic Neuropathy)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/neuropathic.html">நரம்பியல் வலி (Neuropathic pain)</a>
                                                     </div>
                                                 </li>
                                                 <li id="menu-item-3075"
