Update CSS styles and fix broken links

--- a/contact.html
+++ b/contact.html
@@ -1467,7 +1467,7 @@
 
             #site-header-menu #site-navigation div.nav-menu>ul,
             #site-header-menu #site-navigation div.nav-menu>ul ul {
-                overflow: hidden;
+                /* overflow: hidden; */
                 max-height: 0px;
             }
 
