Update multiple pages with new disease information

--- a/index.html
+++ b/index.html
@@ -4059,6 +4059,10 @@
                                                         <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/seizures.html">வலிப்பு (Seizures/Epilepsy)</a>
                                                         <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/neuropathy.html">சர்க்கரை நோயினால் நரம்பு தளர்ச்சி (Diabetic Neuropathy)</a>
                                                         <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/neuropathic.html">நரம்பியல் வலி (Neuropathic pain)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/dementia.html">மறதி நோய் அல்லது டிமென்ஷியா (Dementia)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/GBS.html">குய்லின்-பாரே நோய் (Guillain barre syndrome/ GBS)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/multiple-sclerosis.html">மல்டிபிள் ஸ்களீரோசிஸ் (Multiple Sclerosis)</a>
+                                                        <a class="menu-item-dropdown-item display-block" href="/knowyourdiseases/vertigo.html">தலைசுற்று (Vertigo)</a>
                                                     </div>
                                                 </li>
                                                 <li id="menu-item-3075"
