--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dr. Arun Gokul Pon</title>
+    <title>Contact - Dr. Arun Gokul Pon</title>
     <style>
         img.wp-smiley,
         img.emoji {
