Update meta descriptions for all pages

--- a/handbook.html
+++ b/handbook.html
@@ -8,6 +8,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Handout - Dr. Arun Gokul Pon</title>
+    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
     <style>
         img.wp-smiley,
         img.emoji {
