--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dr. Arun Gokul Pon</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
     <style>
         img.wp-smiley,
         img.emoji {
@@ -4630,7 +4630,7 @@
                                                         <div
                                                             class="wpb_text_column wpb_content_element  vc_custom_1580455335953">
                                                             <div class="wpb_wrapper">
-                                                                <p>Dr Arun Gokul Pon, top neurologist from Nagercoil,  with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages</p>
+                                                                <p>Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages</p>
 
                                                             </div>
                                                         </div>
